--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
 
 #authorizationBox {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    height: 400px;
+    height: 500px;
     width: 739px;
     background-color: #ffffff;
     border-radius: 30px;
@@ -125,50 +125,49 @@ body {
 }
 
 #authorizationForm {
-    height: 400px;
+    height: 500px;
     width: 739px;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
     grid-gap: 20px;
-    justify-items: center;
 }
 
-.input {
-    padding: 5px;
-    width: 357;
-    height: 34;
+.input{
+    padding: 15px;
+    width: 257;
+    height: 44;
     grid-column: 3 / 11;
     font-size: 20px;
-    border: 1 px solid #7C7C7C;
-    border-radius: 10px;
+    border: 2px solid #c7c7c7;
+    border-radius: 5px;
     transition: all 0.4s ease-in-out;
 }
 
 .input:hover {
-    border: 1 px solid #010101;
-    transition: all 0.4s ease-in-out;
+    border: 2px solid #1E1E1E;
+    transition: all 0.3s ease-in-out;
 }
 
 #login {
-    grid-row: 4;
+    grid-row: 3;
 }
 
 #password {
-    grid-row: 6;
+    grid-row: 5;
 }
 
 #submit {
+    display: block;
     width: 373;
-    height: 34;
+    height: 44;
     border-radius: 10px;
     font-size: 20px;
     color: #ffffff;
     background-color: #1E1E1E;
-    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    transition: all 0.4s ease-in-out;
+    transition: all 0.3s ease-in-out;
     grid-column: 4 / 10;
-    grid-row: 9;
+    grid-row: 9 / 11;
 }
 
 #submit:hover {
@@ -176,17 +175,26 @@ body {
     box-shadow: 5px 5px #404040;
 }
 
+#submit:active {
+    transform: translateX(10px);
+    transform: translateY(5px);
+    box-shadow: none;
+    transition: all 0.4s ease;
+}
 #newAccountButton {
-    width: 273;
-    height: 34;
+    width: 373;
+    height: 44;
     font-size: 20px;
     border: none;
     background-color: #ffffff;
     color: #1E1E1E;
     grid-column: 4 / 10;
-    grid-row: 10;
+    grid-row: 11 / 13;
 }
 
+#newAccountButton:hover {
+    font-weight: 500;
+}
 .footer {
     display: grid;
     grid-gap: 20px;
