--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@ body {
 
 #authorizationBox {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    height: 500px;
-    width: 639px;
+    height: 300px;
+    width: 450px;
     background-color: #ffffff;
     border-radius: 30px;
-    padding: 100px;
+    padding: 70px 100px;
     grid-column: 3 / 11;
     margin-top: 30px;
 }
@@ -132,17 +132,18 @@ body {
     height: inherit;
     width: inherit;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: 1fr 1fr 0.6fr 1fr 0.5fr;
+    row-gap: 30px;
+    column-gap: 10px;
 }
 
 .input{
-    padding: 15px;
+    padding: 5px 15px;
     width: 257;
-    height: 44;
-    grid-column: 3 / 11;
-    font-size: 18px;
+    height: 35;
+    grid-column: 2 / 11;
+    font-size: 16px;
     border: 2px solid #c7c7c7;
     border-radius: 5px;
     transition: all 0.4s ease-in-out;
@@ -154,11 +155,11 @@ body {
 }
 
 #login {
-    grid-row: 3;
+    grid-row: 1;
 }
 
 #password {
-    grid-row: 5;
+    grid-row: 2;
 }
 
 #submit{
@@ -166,12 +167,12 @@ body {
     width: 373;
     height: 44;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 16px;
     color: #ffffff;
     background-color: #1E1E1E;
     transition: all 0.3s ease-in-out;
-    grid-column: 4 / 10;
-    grid-row: 9 / 11;
+    grid-column: 3 / 10;
+    grid-row: 4;
 }
 #submit:hover {
     transition: all 0.4s ease-in-out;
@@ -186,35 +187,38 @@ body {
 #newAccountButton {
     width: 373;
     height: 44;
-    font-size: 20px;
+    font-size: 16px;
     border: none;
     background-color: #ffffff;
     color: #1E1E1E;
-    grid-column: 4 / 10;
-    grid-row: 11 / 13;
+    grid-column: 3 / 10;
+    grid-row: 5;
+}
+#newAccountButton a {
+    color: #010101;
 }
 #newAccountButton:hover {
     font-weight: 500;
 }
 .subHeading{
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 500;
     color: #010101;
 }
 .explanation{
     color: #c7c7c7;
-    font-size: 15px;
+    font-size: 14px;
 }
 .explanation:hover{
     color: #9d9d9d;
 }
 #registrationBox {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    height: 500px;
-    width: 1000px;
+    height: 400px;
+    width: 700px;
     background-color: #ffffff;
     border-radius: 50px;
-    padding: 100px 150px;
+    padding: 70px 100px;
     grid-column: 1 / 13;
     margin-top: 30px;
 }
@@ -223,20 +227,21 @@ body {
     width: inherit;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    grid-gap: 30px;
+    grid-template-rows: 0.3fr 0.5fr 0.5fr 0.5fr 0.2fr 0.6fr;
+    row-gap: 25px;
+    column-gap: 10px;
 }
 #createAnAccount {
     display: block;
     width: 373;
     height: 44;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 16px;
     color: #ffffff;
     background-color: #1E1E1E;
     transition: all 0.3s ease-in-out;
     grid-column: 4 / 10;
-    grid-row: 8 / 11;
+    grid-row: 6;
 }
 #createAnAccount:hover {
     transition: all 0.4s ease-in-out;
