--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a {
 body {
     background: #F6F7F8;
 }
-
+/*стиль хедера*/
 .header {
     height: 80px;
     background-color: white;
@@ -48,6 +48,7 @@ body {
     color: #010101;
 }
 
+/*стиль страниц*/
 .mainPage,
 .authoriaztionPage,
 .registrationPage {
@@ -62,7 +63,15 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-
+.servicesBoxesContainer{
+    padding: 0px 200px;
+    grid-column: 1 / 13;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 #services,
 #authoriaztion,
 #registration {
@@ -73,14 +82,14 @@ body {
     text-align: center;
 }
 
+/*стиль карточек на главной странице*/
 .servicesBoxes {
-    /*box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);*/
-    height: 295px;
-    width: 320px;
+    height: 300px;
+    width: 200px;
     background-color: #ffffff;
     border-radius: 30px;
     padding: 40px;
-    margin-top: 30px;
+    margin: 30px;
     transition: all 0.4s ease-in-out;
 }
 
@@ -91,58 +100,39 @@ body {
     box-shadow: 5px 5px #404040;
 }
 
-#cashCreditBox,
-#mortgageBox {
-    grid-column: 1 / 5;
-}
-
-#creditCardBox,
-#autoCreditBox {
-    grid-column: 5 / 9;
-}
-
-#educationCreditBox,
-#businessCreditBox {
-    grid-column: 9 / 13;
-}
-
 .servicesBoxes p {
     font-size: 20px;
     font-weight: 600;
 }
 
 .servicesBoxes img {
-    height: 160px;
-    width: 160px;
-    margin: 45px 80px 0px;
+    height: 120px;
+    width: 120px;
+    margin: 40px;
 }
+/*конец стиля карточек на главной странице*/
 
+/*стиль страницы авторизации*/
 #authorizationBox {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
     height: 300px;
-    width: 450px;
+    width: 350px;
     background-color: #ffffff;
     border-radius: 30px;
-    padding: 70px 100px;
+    padding: 60px 120px;
     grid-column: 3 / 11;
-    margin-top: 30px;
 }
 
 #authorizationForm {
     height: inherit;
     width: inherit;
-    display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: 1fr 1fr 0.6fr 1fr 0.5fr;
-    row-gap: 30px;
-    column-gap: 10px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
 .input {
-    padding: 5px 15px;
-    width: 257;
-    height: 35;
-    grid-column: 2 / 11;
+    padding: 12px 15px;
     font-size: 16px;
     border: 1px solid #c7c7c7;
     border-radius: 5px;
@@ -154,25 +144,15 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-#login {
-    grid-row: 1;
-}
-
-#password {
-    grid-row: 2;
-}
-
 #submit {
+    margin: 60px 0px -10px;
     display: block;
-    width: 373;
-    height: 44;
     border-radius: 10px;
+    padding: 12px 15px;
     font-size: 16px;
     color: #ffffff;
     background-color: #1E1E1E;
     transition: all 0.2s ease-in-out;
-    grid-column: 3 / 10;
-    grid-row: 4;
     border: none;
 }
 
@@ -189,14 +169,12 @@ body {
 }
 
 #newAccountButton {
-    width: 373;
-    height: 44;
+    margin-bottom: -20px;
+    padding: 12px 15px;
     font-size: 16px;
     border: none;
     background-color: #ffffff;
     color: #1E1E1E;
-    grid-column: 3 / 10;
-    grid-row: 5;
 }
 
 #newAccountButton a {
@@ -207,6 +185,7 @@ body {
     font-weight: 500;
 }
 
+/*стиль страницы регистрации*/
 .subHeading {
     font-size: 20px;
     font-weight: 500;
@@ -311,12 +290,12 @@ body {
     margin-left: 15px;
 }
 
+/*стиль футера*/
 .footer {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(12, 1fr);
+    margin-top: 500px;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-items: center;
     background-color: #c7c7c7;
     height: 120px;
 }
@@ -324,6 +303,5 @@ body {
 #author {
     letter-spacing: 2px;
     font-size: 14px;
-    grid-column: 5 / 9;
     color: #F6F7F8;
 }
