--- a/style.css
+++ b/style.css
@@ -9,28 +9,31 @@ a {
 body {
     background: #F6F7F8;
 }
+
+
 /*стиль хедера*/
+
 .header {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 20px;
     height: 80px;
     background-color: white;
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(12, 1fr);
-    align-items: center;
 }
 
 #logo {
+    grid-column: 2 / 5;
     font-family: 'Unbounded', cursive;
     color: #010101;
     letter-spacing: 2px;
     font-size: 30px;
-    grid-column: 2/5;
 }
 
 #applications {
-    font-size: 16px;
     grid-column: 9;
+    font-size: 16px;
     color: #7C7C7C;
 }
 
@@ -39,8 +42,8 @@ body {
 }
 
 #profile {
-    font-size: 16px;
     grid-column: 10;
+    font-size: 16px;
     color: #7C7C7C;
 }
 
@@ -48,94 +51,108 @@ body {
     color: #010101;
 }
 
+
 /*стиль страниц*/
+
 .mainPage,
 .authoriaztionPage,
 .registrationPage {
     display: grid;
-    grid-gap: 30px;
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
     justify-items: center;
-    max-width: 1300px;
-    margin-top: 100px;
-    margin-bottom: 200px;
+    grid-gap: 30px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
+    margin-bottom: 200px;
+    max-width: 1300px;
 }
-.servicesBoxesContainer{
-    padding: 0px 200px;
+
+.servicesBoxesContainer {
     grid-column: 1 / 13;
-    width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
+    padding: 0px 200px;
+    width: 100%;
 }
+
 #services,
 #authoriaztion,
 #registration {
     grid-column: 5 / 9;
-    color: #010101;
     margin-bottom: 100px;
+    color: #010101;
     font-size: 40px;
     text-align: center;
 }
 
+
 /*стиль карточек на главной странице*/
+
 .servicesBoxes {
+    padding: 40px;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: 300px;
     width: 200px;
     background-color: #ffffff;
     border-radius: 30px;
-    padding: 40px;
-    margin: 30px;
     transition: all 0.4s ease-in-out;
 }
 
 .servicesBoxes:hover {
+    box-shadow: 5px 5px #404040;
     transform: translateX(-10px);
     transform: translateY(-10px);
     transition: all 0.4s ease-in-out;
-    box-shadow: 5px 5px #404040;
 }
 
 .servicesBoxes p {
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .servicesBoxes img {
+    margin-bottom: 40px;
+    align-self: center;
     height: 120px;
     width: 120px;
-    margin: 40px;
 }
+
+
 /*конец стиля карточек на главной странице*/
 
+
 /*стиль страницы авторизации*/
+
 #authorizationBox {
-    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
+    grid-column: 3 / 11;
+    padding: 60px 120px;
     height: 300px;
     width: 350px;
-    background-color: #ffffff;
     border-radius: 30px;
-    padding: 60px 120px;
-    grid-column: 3 / 11;
+    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
+    background-color: #ffffff;
 }
 
 #authorizationForm {
-    height: inherit;
-    width: inherit;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    height: inherit;
+    width: inherit;
 }
 
 .input {
     padding: 12px 15px;
     font-size: 16px;
-    border: 1px solid #c7c7c7;
     border-radius: 5px;
+    border: 1px solid #c7c7c7;
     transition: all 0.4s ease-in-out;
 }
 
@@ -144,37 +161,37 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-#submit {
-    margin: 60px 0px -10px;
+input[type="submit"] {
     display: block;
-    border-radius: 10px;
+    margin: 60px 0px -10px;
     padding: 12px 15px;
+    border: none;
+    border-radius: 10px;
     font-size: 16px;
     color: #ffffff;
     background-color: #1E1E1E;
     transition: all 0.2s ease-in-out;
-    border: none;
 }
 
-#submit:hover {
-    transition: all 0.2s ease-in-out;
+input[type="submit"]:hover {
     box-shadow: 5px 5px #404040;
+    transition: all 0.2s ease-in-out;
 }
 
-#submit:active {
+input[type="submit"]:active {
+    box-shadow: none;
     transform: translateX(10px);
     transform: translateY(5px);
-    box-shadow: none;
     transition: all 0.4s ease;
 }
 
 #newAccountButton {
     margin-bottom: -20px;
     padding: 12px 15px;
-    font-size: 16px;
     border: none;
-    background-color: #ffffff;
+    font-size: 16px;
     color: #1E1E1E;
+    background-color: #ffffff;
 }
 
 #newAccountButton a {
@@ -185,7 +202,55 @@ body {
     font-weight: 500;
 }
 
+
 /*стиль страницы регистрации*/
+
+#registrationBox {
+    grid-column: 1 / 13;
+    padding: 60px 120px;
+    height: 400px;
+    width: 700px;
+    border-radius: 50px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
+}
+
+#registrationForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: inherit;
+    width: inherit;
+}
+
+.inputData {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 250px;
+}
+
+.personalData {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+}
+
+.contactInformation {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+}
+
+.inputButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .subHeading {
     font-size: 20px;
     font-weight: 500;
@@ -193,6 +258,8 @@ body {
 }
 
 .explanation {
+    margin: 0px 0px 0px 15px;
+    height: 45.5px;
     color: #c7c7c7;
     font-size: 12px;
 }
@@ -201,96 +268,14 @@ body {
     color: #9d9d9d;
 }
 
-#registrationBox {
-    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    height: 400px;
-    width: 700px;
-    background-color: #ffffff;
-    border-radius: 50px;
-    padding: 70px 100px;
-    grid-column: 1 / 13;
-    margin-top: 30px;
-}
-
-#registrationForm {
-    height: inherit;
-    width: inherit;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 0.3fr 0.5fr 0.5fr 0.5fr 0.2fr 0.6fr;
-    row-gap: 25px;
-    column-gap: 10px;
-}
-
 #createAnAccount {
-    display: block;
-    width: 373;
-    height: 44;
-    border-radius: 10px;
-    border: none;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #1E1E1E;
-    transition: all 0.2s ease-in-out;
-    grid-column: 4 / 10;
-    grid-row: 6;
+    margin-bottom: 0px;
+    width: 300px;
 }
 
-#createAnAccount:hover {
-    transition: all 0.2s ease-in-out;
-    box-shadow: 5px 5px #404040;
-}
-
-#createAnAccount:active {
-    transform: translateX(10px);
-    transform: translateY(5px);
-    box-shadow: none;
-    transition: all 0.4s ease;
-}
-
-#personalData {
-    grid-column: 1 / 6;
-    grid-row: 1;
-}
-
-#surname {
-    grid-column: 1 / 6;
-    grid-row: 2;
-}
-
-#name {
-    grid-column: 1 / 6;
-    grid-row: 3;
-}
-
-#patronymic {
-    grid-column: 1 / 6;
-    grid-row: 4;
-}
-
-#contactInformation {
-    grid-column: 8 / 13;
-    grid-row: 1;
-}
-
-#tel {
-    grid-column: 8 / 13;
-    grid-row: 2;
-}
-
-#email {
-    grid-column: 8 / 13;
-    grid-row: 3;
-}
-
-#emailExplanation {
-    grid-column: 8 / 13;
-    grid-row: 4;
-    margin-top: -15px;
-    margin-left: 15px;
-}
 
 /*стиль футера*/
+
 .footer {
     margin-top: 500px;
     display: flex;
