working on authorization

--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -12,18 +12,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="/public/style.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
     <title>Главная | ProCredit</title>
   </head>
 
   <body>
-    <header>
-      <div class="header">
-        <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applications">Заявки</a>
-        <a href="authorizationPage.html" id="profile">Профиль</a>
-      </div>
-    </header>
+    <%- include('blocks/header.ejs') %>
     <main>
       <div class="mainPage">
         <h1 id="services">Услуги</h1>
