working on authorization

--- a/views/registrationPage.ejs
+++ b/views/registrationPage.ejs
@@ -43,8 +43,14 @@
                   id="patronymic"
                   name="patronymic"
                   placeholder="Отчество" />
+                <input
+                  type="tel"
+                  class="input"
+                  id="phone"
+                  name="phone"
+                  placeholder="+7" />
               </div>
-              <div class="contactInformation">
+              <div class="loginData">
                 <p class="subHeading" id="contactInformationLabel">
                   Данные для входа
                 </p>
@@ -72,7 +78,8 @@
               <input
                 type="submit"
                 id="createAnAccount"
-                value="Создать аккаунт" />
+                value="Создать аккаунт"
+                href="/profile" />
             </div>
           </form>
         </div>
