--- a/public/css/style.css
+++ b/public/css/style.css
@@ -168,7 +168,7 @@ input[type="submit"] {
     padding: 12px 15px;
     border: none;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: 16px;
     color: #ffffff;
     background-color: #1E1E1E;
     transition: all 0.4s ease-in-out;
@@ -208,9 +208,9 @@ input[type="submit"]:active {
 
 #registrationBox {
     grid-column: 1 / 13;
-    padding: 60px 120px;
-    height: 400px;
-    width: 700px;
+    padding: 50px 100px;
+    height: 750px;
+    width: 300px;
     border-radius: 50px;
     background-color: #ffffff;
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
@@ -226,19 +226,23 @@ input[type="submit"]:active {
 
 .inputData {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     flex-wrap: wrap;
-    height: 250px;
 }
-
 .inputData div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 300px;
 }
-
+.personalData{
+    height: 320px;
+}
+.loginData{
+    margin-top: 40px;
+    height: 250px;
+}
 .inputButton {
     display: flex;
     justify-content: center;
