--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -1,7 +1,7 @@
 <header>
   <div class="header">
     <a href="/" id="logo">Pro Credit</a>
-    <a href="/applications" id="applications">Заявки</a>
-    <a href="/authorization" id="profile">Профиль</a>
+    <a href="/applications" id="applicationsLinks">Заявки</a>
+    <a href="/authorization" id="profileLink">Профиль</a>
   </div>
 </header>
