--- a/views/registrationPage.ejs
+++ b/views/registrationPage.ejs
@@ -21,7 +21,7 @@
       <div class="registrationPage">
         <h1 id="registration">Регистрация</h1>
         <div id="registrationBox">
-          <form id="registrationForm" method="post" action="/profile">
+          <form id="registrationForm" method="post" action="/autentication">
             <div class="inputData">
               <div class="personalData">
                 <p class="subHeading" id="personalDataLabel">Личные данные</p>
@@ -78,8 +78,7 @@
               <input
                 type="submit"
                 id="createAnAccount"
-                value="Создать аккаунт"
-                href="/profile" />
+                value="Создать аккаунт" />
             </div>
           </form>
         </div>
