--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,9 @@
     --light-gray: #ebebeb;
     --light-gray-2: #e1e1e1;
     --error-red: #D01919;
-  }
-  * {
+}
+
+* {
     font-family: 'Poppins', sans-serif;
 }
 
@@ -18,7 +19,7 @@ body {
     background: #F6F7F8;
 }
 
-.buttonType1{
+.buttonType1 {
     display: block;
     margin: 60px 0px -10px;
     padding: 12px 15px;
@@ -29,17 +30,19 @@ body {
     background-color: var(--dark-gray);
     transition: all 0.4s ease-in-out;
 }
-.buttonType1:hover{
+
+.buttonType1:hover {
     box-shadow: 5px 5px var(--gray);
     transition: all 0.4s ease-in-out;
 }
 
-.buttonType1:active{
+.buttonType1:active {
     box-shadow: none;
     transform: translateX(10px);
     transform: translateY(5px);
     transition: all 0.4s ease-in-out;
 }
+
 
 /*стиль хедера*/
 
@@ -96,7 +99,7 @@ body {
     grid-gap: 30px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 80px;
     margin-bottom: 200px;
     max-width: 1300px;
 }
@@ -117,7 +120,7 @@ body {
 #profile,
 #applications {
     grid-column: 5 / 9;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     color: var(--dark-gray);
     font-size: 40px;
     text-align: center;
@@ -195,7 +198,6 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-
 #newAccountButton {
     margin-bottom: -20px;
     padding: 12px 15px;
@@ -221,7 +223,7 @@ body {
     padding: 50px 100px;
     height: 750px;
     width: 300px;
-    border-radius: 50px;
+    border-radius: 40px;
     background-color: #ffffff;
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
 }
@@ -240,19 +242,23 @@ body {
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .inputData div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 300px;
 }
-.personalData{
+
+.personalData {
     height: 320px;
 }
-.loginData{
+
+.loginData {
     margin-top: 40px;
     height: 250px;
 }
+
 .inputButton {
     display: flex;
     justify-content: center;
@@ -267,7 +273,7 @@ body {
 }
 
 #createAnAccount {
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     width: 300px;
 }
 
@@ -277,17 +283,23 @@ body {
 .footer {
     margin-top: 500px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #c7c7c7;
+    background-color: var(--dark-gray);
     height: 120px;
+}
+
+.footer>p:first-child {
+    margin-top: 20px;
 }
 
 #author {
     letter-spacing: 2px;
-    font-size: 14px;
+    font-size: 12px;
     color: #F6F7F8;
 }
+
 
 /*конец стиля страницы регистрации*/
 
@@ -306,14 +318,16 @@ body {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
     background-color: #ffffff;
 }
-.userData{
+
+.userData {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-content: flex-start;
     flex-wrap: wrap;
 }
-.userData div{
+
+.userData div {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -321,52 +335,62 @@ body {
     width: 230px;
     height: 340px;
 }
-.userData p:first-child{
+
+.userData p:first-child {
     margin-bottom: 40px;
 }
-.dataCategory{
+
+.dataCategory {
     margin-top: 20px;
     font-size: 17px;
     color: var(--dark-gray);
 }
-.description{
+
+.description {
     font-size: 15px;
-    margin-top:-5px;
+    margin-top: -5px;
     color: var(--gray);
 }
-.profileBoxButtons{
+
+.profileBoxButtons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
-#logOut{
+
+#logOut {
     margin: 0;
     width: 160px;
     text-align: center;
     color: var(--gray);
     background: none;
 }
-#logOut:hover{
+
+#logOut:hover {
     font-size: 16.5px;
     box-shadow: none;
 }
-#editPersonalInformation{
+
+#editPersonalInformation {
     margin: 0;
     width: 200px;
 }
-#deleteAnAccount{
+
+#deleteAnAccount {
     margin: 0;
     width: 160px;
     text-align: center;
     color: var(--error-red);
     background: none;
 }
-#deleteAnAccount:hover{
+
+#deleteAnAccount:hover {
     font-size: 16.5px;
     box-shadow: none;
 }
+
 
 /*конец стиля страницы профиля*/
 
@@ -385,32 +409,39 @@ body {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
     background-color: white;
 }
-.applicationsTable{
+
+.applicationsTable {
     max-height: 400px;
     border: 2px solid var(--gray);
     border: 0px;
     border-spacing: 25px;
     border-collapse: collapse;
 }
-td, th{
+
+td,
+th {
     padding: 15px 20px;
     text-align: left;
     vertical-align: baseline;
 }
-td{
+
+td {
     font-size: 16px;
     color: var(--gray);
     border-radius: 7px;
 }
-th{
+
+th {
     font-size: 17px;
     color: var(--dark-gray);
 }
-tr{
+
+tr {
     border-radius: 15px;
     transition: all 0.35s ease-in-out;
 }
-.addButton{
+
+.addButton {
     position: relative;
     bottom: 0px;
     left: 750px;
@@ -423,13 +454,16 @@ tr{
     background-color: var(--light-gray);
     transition: all 0.35s ease-in-out;
 }
-.addButton:hover{
+
+.addButton:hover {
     background-color: var(--light-gray-2);
     transition: all 0.35s ease-in-out;
 }
 
+
 /*стиль модального окна*/
-.modal-addApplication{
+
+.modal-addApplication {
     pointer-events: none;
     opacity: 0;
     position: fixed;
@@ -444,13 +478,15 @@ tr{
     background-color: rgba(0, 0, 0, 0);
     transition: opacity .3s, background-color .5s;
 }
-.is-open{
+
+.is-open {
     opacity: 1;
     pointer-events: all;
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.5);
 }
-.modalContent{
+
+.modalContent {
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -466,13 +502,14 @@ tr{
     background-color: #fff;
     border-radius: 20px;
 }
-.closeModalButtonContainer{
+
+.closeModalButtonContainer {
     width: inherit;
     display: flex;
     justify-content: flex-end;
-    
 }
-.closeModalButton{
+
+.closeModalButton {
     justify-self: flex-start;
     width: 40px;
     height: 40px;
@@ -485,14 +522,17 @@ tr{
     opacity: 0.9;
     transition: all 0.35s ease-in-out;
 }
-.closeModalButton:hover{
+
+.closeModalButton:hover {
     background-color: var(--light-gray-2);
     transition: all 0.35s ease-in-out;
 }
-#addApplicationHeading{
+
+#addApplicationHeading {
     margin-bottom: 60px;
 }
-#applicationType{
+
+#applicationType {
     font-size: 14px;
     color: var(--dark-gray);
     padding: 12px 15px;
@@ -505,20 +545,23 @@ tr{
     border: 1px solid var(--dark-gray);
     transition: all 0.3s ease-in-out;
 }
-#applicationForm{
+
+#applicationForm {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 300px;
     width: inherit;
 }
-.applicationTypeOption{
+
+.applicationTypeOption {
     padding: 12px;
     font-size: 14px;
     color: var(--dark-gray);
     transition: all 0.35s ease-in-out;
 }
-.applicationTypeOption:hover{
+
+.applicationTypeOption:hover {
     background: rgba(235, 235, 235, 1);
     transition: all 0.35s ease-in-out;
 }
