--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Профиль | ProCredit</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <%- include('blocks/header.ejs') %>
-    <main class="profilePage">
-      <h1 id="profile">Профиль</h1>
-      <div id="profileBox">
-        <div class="userData">
-          <div class="profilePersonalData">
-            <p class="subHeading" id="contactInformationLabel">Личные данные</p>
-            <p id="fio" class="dataCategory">ФИО</p>
-            <p id="fio" class="description"><% surname name patronymic %></p>
-            <p id="phoneNumber" class="dataCategory">Контактный номер</p>
-            <p id="phoneNumber" class="description">+<% phone %></p>
-          </div>
-          <div class="profileLoginData">
-            <p class="subHeading" id="contactInformationLabel">
-              Данные для входа
-            </p>
-            <p id="profileLogin" class="dataCategory">Логин</p>
-            <p id="profileLogin" class="description"><% login %></p>
-            <p id="profilePassword" class="dataCategory">Пароль</p>
-            <input
-              id="profilePassword"
-              class="input"
-              type="password"
-              value="qwerty"
-              readonly />
-          </div>
-        </div>
-        <div class="profileBoxButtons">
-          <button class="buttonType1" id="logOut">Выйти</button>
-          <button class="buttonType1" id="editPersonalInformation">
+        <main class="profilePage">
+            <h1 id="profile">Профиль</h1>
+            <div id="profileBox">
+                <div class="userData">
+                    <div class="profilePersonalData">
+                        <p class="subHeading" id="contactInformationLabel">Личные данные</p>
+                        <p id="fio" class="dataCategory">ФИО</p>
+                        <p id="fio" class="description">
+                            <% surname name patronymic %>
+                        </p>
+                        <p id="phoneNumber" class="dataCategory">Контактный номер</p>
+                        <p id="phoneNumber" class="description">+
+                            <% phone %>
+                        </p>
+                    </div>
+                    <div class="profileLoginData">
+                        <p class="subHeading" id="contactInformationLabel">
+                            Данные для входа
+                        </p>
+                        <p id="profileLogin" class="dataCategory">Логин</p>
+                        <p id="profileLogin" class="description">
+                            <% login %>
+                        </p>
+                        <p id="profilePassword" class="dataCategory">Пароль</p>
+                        <input id="profilePassword" class="input" type="password" value="qwerty" readonly />
+                    </div>
+                </div>
+                <div class="profileBoxButtons">
+                    <button class="buttonType1" id="logOut">Выйти</button>
+                    <button class="buttonType1" id="editPersonalInformation">
             Изменить
           </button>
-          <button class="buttonType1" id="deleteAnAccount">
+                    <button class="buttonType1" id="deleteAnAccount">
             Удалить аккаунт
           </button>
-        </div>
-      </div>
-    </main>
-    <footer class="footer">
-      <p id="author">Disigned by @perpetuumm0bi1e</p>
-    </footer>
-  </body>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <p id="author">Disigned by @perpetuumm0bi1e</p>
+            <p id="author">2023</p>
+        </footer>
+</body>
+
 </html>
