--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -17,39 +17,39 @@
         <main class="profilePage">
             <h1 id="profile">Профиль</h1>
             <div id="profileBox">
-                <div class="userData">
-                    <div class="profilePersonalData">
+                <form id="profile-box" method="post" action="'/main">
+                    <div class="userData">
+                      <div class="profilePersonalData">
                         <p class="subHeading" id="contactInformationLabel">Личные данные</p>
                         <p id="fio" class="dataCategory">ФИО</p>
-                        <p id="fio" class="description">
-                            <% surname name patronymic %>
-                        </p>
+                        <input class="input profile-input unchanged" type="text" id="edited-fio" name="edited-fio" value='<%= surname %>' readonly>
                         <p id="phoneNumber" class="dataCategory">Контактный номер</p>
-                        <p id="phoneNumber" class="description">+
-                            <% phone %>
-                        </p>
-                    </div>
-                    <div class="profileLoginData">
+                        <input class="description profile-input unchanged" type="text" id="edited-phone-number" name="edited-phone-number" value="79012345678" readonly>
+                      </div>
+                      <div class="profileLoginData">
                         <p class="subHeading" id="contactInformationLabel">
-                            Данные для входа
+                          Данные для входа
                         </p>
                         <p id="profileLogin" class="dataCategory">Логин</p>
-                        <p id="profileLogin" class="description">
-                            <% login %>
-                        </p>
+                        <input class="input profile-input unchanged" type="text" id="edited-login" name="edited-login" value="login" readonly>
                         <p id="profilePassword" class="dataCategory">Пароль</p>
-                        <input id="profilePassword" class="input" type="password" value="qwerty" readonly />
+                        <input
+                        class="input profile-input unchanged"
+                          id="edited-password"
+                          name="edited-password"
+                          type="password"
+                          value="qwerty"
+                          readonly />
+                      </div>
                     </div>
-                </div>
-                <div class="profileBoxButtons">
-                    <button class="buttonType1" id="logOut">Выйти</button>
-                    <button class="buttonType1" id="editPersonalInformation">
-            Изменить
-          </button>
-                    <button class="buttonType1" id="deleteAnAccount">
-            Удалить аккаунт
-          </button>
-                </div>
+                    <div class="profileBoxButtons">
+                      <input type="submit" class="buttonType1" id="log-out" name="log-out" value="Выйти">
+                      <button class="buttonType1" id="edit-personal-information">
+                        Изменить
+                      </button>
+                      <input type="submit" class="buttonType1" id="delete-an-account" name="delete-an-account" value="Удалить аккаунт">
+                    </div>
+                  </form>
             </div>
         </main>
         <footer class="footer">
